Convert asset links from absolute to relative

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Using Web Workers for Image Loading</title>
 
-  <link href="/assets/app.css" rel="stylesheet">
+  <link href="assets/app.css" rel="stylesheet">
 
-  <script async src="/assets/app.js"></script>
+  <script async src="assets/app.js"></script>
 </head>
 
 <body>
@@ -20,31 +20,31 @@
   <hr>
 
   <div class="center-me">
-    <img data-src="/assets/images/leeeeezard.jpg">
-    <img data-src="/assets/images/potatoes-french-mourning-funny-162971.jpeg">
-    <img data-src="/assets/images/4323074263657971_img_5422.jpg">
-    <img data-src="/assets/images/apple-desk-laptop-working.jpg">
-    <img data-src="/assets/images/macbook-apple-imac-computer-39284.jpeg">
-    <img data-src="/assets/images/pexels-photo-101515.jpeg">
-    <img data-src="/assets/images/pexels-photo-106344.jpeg">
-    <img data-src="/assets/images/pexels-photo-108036.jpeg">
-    <img data-src="/assets/images/pexels-photo-115045.jpeg">
-    <img data-src="/assets/images/pexels-photo-127627.jpeg">
-    <img data-src="/assets/images/pexels-photo-168066.jpeg">
-    <img data-src="/assets/images/pexels-photo-168765.jpeg">
-    <img data-src="/assets/images/pexels-photo-169647.jpeg">
-    <img data-src="/assets/images/pexels-photo-169789.jpeg">
-    <img data-src="/assets/images/pexels-photo-169905.jpeg">
-    <img data-src="/assets/images/pexels-photo-169915.jpeg">
-    <img data-src="/assets/images/pexels-photo-27117.jpg">
-    <img data-src="/assets/images/pexels-photo-27665.jpg">
-    <img data-src="/assets/images/pexels-photo-52697.jpeg">
-    <img data-src="/assets/images/pexels-photo-64778.jpeg">
-    <img data-src="/assets/images/pexels-photo-87347.jpeg">
-    <img data-src="/assets/images/pexels-photo-92028.jpeg">
-    <img data-src="/assets/images/pexels-photo.jpg">
-    <img data-src="/assets/images/shutterstock_177534164-680x400.jpg">
-    <img data-src="/assets/images/startup-photos.jpg">
+    <img data-src="assets/images/leeeeezard.jpg">
+    <img data-src="assets/images/potatoes-french-mourning-funny-162971.jpeg">
+    <img data-src="assets/images/4323074263657971_img_5422.jpg">
+    <img data-src="assets/images/apple-desk-laptop-working.jpg">
+    <img data-src="assets/images/macbook-apple-imac-computer-39284.jpeg">
+    <img data-src="assets/images/pexels-photo-101515.jpeg">
+    <img data-src="assets/images/pexels-photo-106344.jpeg">
+    <img data-src="assets/images/pexels-photo-108036.jpeg">
+    <img data-src="assets/images/pexels-photo-115045.jpeg">
+    <img data-src="assets/images/pexels-photo-127627.jpeg">
+    <img data-src="assets/images/pexels-photo-168066.jpeg">
+    <img data-src="assets/images/pexels-photo-168765.jpeg">
+    <img data-src="assets/images/pexels-photo-169647.jpeg">
+    <img data-src="assets/images/pexels-photo-169789.jpeg">
+    <img data-src="assets/images/pexels-photo-169905.jpeg">
+    <img data-src="assets/images/pexels-photo-169915.jpeg">
+    <img data-src="assets/images/pexels-photo-27117.jpg">
+    <img data-src="assets/images/pexels-photo-27665.jpg">
+    <img data-src="assets/images/pexels-photo-52697.jpeg">
+    <img data-src="assets/images/pexels-photo-64778.jpeg">
+    <img data-src="assets/images/pexels-photo-87347.jpeg">
+    <img data-src="assets/images/pexels-photo-92028.jpeg">
+    <img data-src="assets/images/pexels-photo.jpg">
+    <img data-src="assets/images/shutterstock_177534164-680x400.jpg">
+    <img data-src="assets/images/startup-photos.jpg">
   </div>
 
   <progress max="0" value="0"></progress>
