Add a link to the repo from the gh page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   <p>This works because the <code>img</code> element does not have a <code>src</code> attribute. Instead, we use <code>data-src</code>. This allows us to grab the sources to be passed to the web workers before the browser attempts to download them, preventing their loading from blocking other requests and the UI thread.</p>
 
+  <p>Grab the code and check it out: <a href="http://github.com/trezy/web-worker-image-preloading-test">http://github.com/trezy/web-worker-image-preloading-test</a></p>
+
   <hr>
 
   <div class="center-me">
