feat: track total load time

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
   <p>Grab the code and check it out: <a href="http://github.com/trezy/web-worker-image-preloading-test">http://github.com/trezy/web-worker-image-preloading-test</a></p>
 
+  <button
+    data-worker="true"
+    id="start"
+    type="button">
+    Loading images with Web Worker
+  </button>
+
+  <button
+    id="start"
+    type="button">
+    Loading images without Web Worker
+  </button>
+
   <hr>
 
   <div class="center-me">
